--- a/d3/visualstyles/testing.css
+++ b/d3/visualstyles/testing.css
@@ -1,28 +1,51 @@
 * {
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 body {
-  font-size: 14px;
-  font-family: sans-serif;
-  font-weight: 100;
-  background-color: #fff;
- /* background-image: linear-gradient(transparent 50%, rgba(255, 255, 255, 0.5) 25%);
-  background-size: 2px 4px;*/
+	font-size: 14px;
+	font-family: sans-serif;
+	font-weight: 100;
+	background-color: #fff;
+	/* background-image: linear-gradient(transparent 50%, rgba(255, 255, 255, 0.5) 25%);
+	background-size: 2px 4px;*/
 }
 
 
 /*
-	Testing css
+Testing css
 */
 
 #test rect {
-  fill: steelblue;
+	fill: steelblue;
 }
 
 #test text {
-  fill: white;
-  font: 16px sans-serif;
-  text-anchor: end;
+	fill: white;
+	font: 11px sans-serif;
+	text-anchor: middle;
+}
+
+.text {
+	color:yellow;
+}
+
+.bar {
+	fill: steelblue;
+}
+
+.axis text {
+	font: 10px sans-serif;
+}
+
+.axis path,
+.axis line {
+	fill: none;
+	stroke: #000;
+	shape-rendering: crispEdges;
+}
+
+.x.axis path {
+	display: none;
 }
